added some texts

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This PAGE.</h1>
     <p>Hello I am still learning git and it is going good</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, ducimus.</p>
 </body>
 </html>
